# JuegoOCA

./: CMakeLists.txt  JuegoOCA.pro  README.md  copia  lectorarchivos.cpp  lectorarchivos.h  mainwindow.cpp  mainwindow.h  recursos.qrc
guardado/: configuracion.txt
interfaz/: menuconfiguracion.cpp  menuconfiguracion.h  menuconfiguracion.ui  menuconfiguraciongeneral.cpp  menuconfiguraciongeneral.h  menuconfiguraciongeneral.ui  menuconfiguracionpartida.cpp  menuconfiguracionpartida.h  menuconfiguracionpartida.ui  menujuego.cpp  menujuego.h  menujuego.ui  menupartida.cpp  menupartida.h  menupartida.ui  menuprincipal.cpp  menuprincipal.h  menuprincipal.ui
juego/: casilla.cpp  casilla.h  casillacalavera.cpp  casillacalavera.h  casillacarcel.cpp  casillacarcel.h  casillajardin.cpp  casillajardin.h  casillalaberinto.cpp  casillalaberinto.h  casillanormal.cpp  casillanormal.h  casillaoca.cpp  casillaoca.h  casillaposada.cpp  casillaposada.h  casillapozo.cpp  casillapozo.h  casillapuente.cpp  casillapuente.h  dado.cpp  dado.h  gestorpartidas.cpp  gestorpartidas.h  juegooca.cpp  juegooca.h  jugador.cpp  jugador.h  tablero.cpp  tablero.h
partidas/: gestorpartidas.cpp  gestorpartidas.h
saves/: gestorpartidas.h
